<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.n0582158.signlanguageapp.TrueOrFalseNumbers">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:layout_marginTop="150dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="34sp"
            android:padding="16dp"
            android:textColor="#000"
            android:fontFamily="casual"
            android:layout_margin="16dp"
            android:id="@+id/grade"
            android:text="@string/game_result"/>

        <TextView
            android:layout_below="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:padding="16dp"
            android:textColor="#000"
            android:layout_margin="16dp"
            android:fontFamily="casual"
            android:id="@+id/outOf"
            android:text="@string/game_num_res"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:gravity="center"
        android:layout_below="@+id/result"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/retry"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/game_play_again"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:textColor="#fff"
            android:background="#2075d1"
            android:textSize="18sp"
            android:fontFamily="casual"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/again"
            android:layout_toRightOf="@+id/retry"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/game_return"
            android:layout_margin="4dp"
            android:textColor="#fff"
            android:background="#2075d1"
            android:textSize="18sp"
            android:fontFamily="casual"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>



</RelativeLayout>