<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.n0582158.signlanguageapp.LessonsOptions"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_box"
        android:layout_centerHorizontal="true"
        android:id="@+id/textt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            android:textColor="#000"
            android:text="@string/game_desc"
            android:textStyle="bold"
            android:textSize="23dp"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/box1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/title"
        android:id="@+id/main_box">



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_box_components"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">



            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/lesson_box">

                <ImageView
                    android:id="@+id/lessons"
                    android:text="Lessons"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/true_false"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/true_or_false"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:fontFamily="casual"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_below="@+id/lessons"
                    android:id="@+id/textView" />

            </RelativeLayout>





            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/paint_box"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/lesson_box">

                <ImageView
                    android:id="@+id/paint"
                    android:text="Paint"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/multiple"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/multiple_answers"
                    android:layout_centerHorizontal="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:fontFamily="casual"
                    android:textColor="#000"
                    android:layout_below="@+id/paint"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>


        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>
